# dcse-summerschool

./: .gitignore  LICENSE  README.md  program_DCSE_summerschool2023.odt  run-container.sh
configurefiles/: do-configure-trilinos.sh  do-configure-vtk.sh
dockerfiles/: frosch_demo
exercises/gpu-lab/: Makefile  README.md  compile-and-run-gpu.slurm  matvec_helpers.c  matvec_helpers.cu  matvec_helpers.h  matvecprod-cpu.c  matvecprod-cublas.cu  matvecprod-globalmem-simple_um.cu  matvecprod-sharedmem-blocks_um.cu  matvecprod-sharedmem-simple_um.cu  run-cpu.sh  run-cpu.slurm
exercises/gpu-lab/solution/: matvecprod-cpu.c
exercises/lab1/: README.md  task_lu.cpp
exercises/lab1/solution/: Makefile  task_lu.cpp
exercises/lab2/: README.md
exercises/lab2/frosch-demo/: README.md  delete-container.sh
exercises/lab2/frosch-demo/src/exercise-1/: CMakeLists.txt
exercises/lab2/frosch-demo/src/exercise-2/: README.md
exercises/lab2/frosch-demo/src/exercise-3/: README.md  parameters-2d.xml
exercises/lab2/frosch-demo/src/solution/: CMakeLists.txt  main.cpp  parameters-2d.xml  parameters-3d.xml
exercises/lab2/trilinos-tutorial/src/solution-exercise-1/: CMakeLists.txt
exercises/lab2/trilinos-tutorial/src/solution-exercise-2/: CMakeLists.txt
exercises/lab3/: CMakeLists.txt  README.md  ifpack_driver.cpp  run_on_cpu.sh  trilinos-env.sh
exercises/lab4/: README.md
exercises/qc-lab/: README.md
gpu-lab/: Makefile  README.md  compile-and-run-gpu.slurm  env.sh  matvec_helpers_um.cu  matvecprod-cpu.c  matvecprod-cublas.cu  matvecprod-main.cu  matvecprod-sharedmem-simple_um.cu  run-cpu.slurm
gpu-lab/solution/: Makefile  matmatprod-cublas.cu  matmatprod-main.cu  matvecprod-cpu.c
helper_scripts/: likwid-mpirun  trilinos-env.sh
lab1/: README.md  run-task_lu.slurm  task_lu.cpp
lab1/solution/: task_lu.cpp
lab2/: CMakeLists.txt  README.md  build_and_run_on_gpu.sh  env.sh  run_on_cpu.sh  trilinos-env-gpu.sh  trilinos-env.sh
lab2/exercise-1/: CMakeLists.txt  README.md  compile_and_run_on_gpu.slurm  run_on_cpu-MPI.slurm  run_on_cpu-OMP.slurm
lab2/exercise-2/: CMakeLists.txt  README.md  compile_and_run_on_gpu.slurm
lab2/exercise-3/: CMakeLists.txt  README.md  main.cpp  parameters-2d.xml  run_on_cpu.slurm
lab2/exercise-3/solution/: main.cpp  parameters-3d.xml  utils.hpp
lab2/exercise-4/: CMakeLists.txt  README.md  main.cpp  parameters-3d.xml  utils.hpp
lab2/exercise-4/solution/: CMakeLists.txt  main.cpp
lab2/frosch-demo/: build-container.sh
lab2/frosch-demo/src/: README.md
lab2/frosch-demo/src/exercise-1/: README.md  parameters.xml
lab2/frosch-demo/src/exercise-2/: CMakeLists.txt
lab2/frosch-demo/src/exercise-3/: CMakeLists.txt
lab2/frosch-demo/src/solution/: README.md
lab2/trilinos-tutorial/src/: CMakeLists.txt
lab2/trilinos-tutorial/src/exercise-1/: CMakeLists.txt
lab2/trilinos-tutorial/src/exercise-2/: CMakeLists.txt
lab2/trilinos-tutorial/src/solution-exercise-2/: CMakeLists.txt
lab3/: CMakeLists.txt  README.md  env.sh  getSuiteSparseMatrices.sh  likwid-mpirun  run_on_cpu_with_likwid.sh  run_spmv_on_cpu.sh  run_spmv_on_cpu.slurm  spmv_driver.cpp
lab3/data/: lap128x128.mtx  rhs128x128.mtx  sol128x128.mtx
lab4/: CMakeLists.txt  README.md  env.sh  ifpack_driver.cpp  run_ifpack_on_cpu.sh  run_ifpack_on_cpu.slurm
qc-lab/: README.md  dwave.conf
qc-lab/exercise-1/: README.md
qc-lab/exercise-2/: README.md  maximum_cut.py  maximum_cut_ising.py  maximum_cut_large.py  maximum_cut_minorembedding.py
qc-lab/exercise-3/: README.md  tsp.py
src/: CMakeLists.txt  README.md  headers_and_helpers.hpp
src/exercise-1/: README.md  main.cpp  parameters.xml
src/exercise-2/: README.md  main.cpp  parameters-2d.xml  parameters-3d.xml
src/exercise-3/: README.md  main.cpp  parameters-2d.xml
src/solution/: CMakeLists.txt  README.md  main.cpp  parameters-3d.xml
